examples/test/testpolicy10473.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10473
  namespace: namespace70
spec:
  podSelector:
    matchLabels:
      key21: value7
      key42: value47
      key38: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value6
      podSelector:
        matchLabels:
          key25: value25
          key38: value32
          key9: value19
